Clears user tasks and finishes on xarray intro

--- a/2-Climate-Data-Overview.ipynb
+++ b/2-Climate-Data-Overview.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.dimensions['lat']"
+    "dataset.dimensions[]"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ncTime.units, ncLat.units, ncLon.units"
+    "#show the units of the ncTime variable\n"
    ]
   },
   {
@@ -1010,75 +1010,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2.2 Spatial slices\n",
-    "Here we create Boolean masks to filter our datasets on the lat and lon axes. "
+    "## 6. Using `xarray`\n",
+    "Ok. We are starting to get a handle on the basics of wrangling climate data with NetCDF4/NumPy/Pandas. However, before going any deeper into this rabbit hole, it's time to move onto something that makes this all MUCH easier. Turns out, someone coded a new Python package called **`xarray`** that includes a number of functions and methods tailored exactly to our needs. \n",
+    "\n",
+    "So, let's move to the next notebook!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfX = dfMeanPrecip.reset_index()\n",
-    "dfX.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfX=dfMeanPrecip.reset_index().melt(var_name=\"lon\",value_name=\"precip\",id_vars='index')\n",
-    "dfX.columns = ['lat','lon','precip']\n",
-    "dfX.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latFilter = (dfMeanPrecip.index > 2000) & (dfMeanPrecip.index < 2005)\n",
-    "lonFilter = "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 4.2.2 Creating a map for one time slice\n",
-    "What if we fix time and then plot data across space? Well create a 2d array for one time snapshot and then map it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.image as mpimg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(15,5))\n",
-    "plt.imshow(dfMeanPrecip,origin=(0,0),cmap=\"YlGnBu\")\n",
-    "plt.colorbar();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
